--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ section {
   padding: 5rem;
 }
 
+.stats {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 }
