--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ main {
 
 section {
   display: inherit;
+  justify-content: center;
   width: 1140px;
   height: 446px;
 }
@@ -57,6 +58,7 @@ section {
 .content {
   display: flex;
   flex-direction: column;
+  width: 50%;
   gap: 4.5rem;
   background-color: var(--card-background);
   padding: 5rem 7rem 5rem 5rem;
@@ -131,10 +133,6 @@ section {
   section {
     flex-direction: column-reverse;
     margin: 0 48px;
-  }
-
-  .img-container img {
-    content: url("./assets/images/image-header-mobile.jpg");
   }
 }
 
