Update: Finish responsive styling.

--- a/style.css
+++ b/style.css
@@ -125,7 +125,9 @@ section {
 
 /* Extra small devices (phones, 600px and down) */
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (max-width: 767px) {
+/* Medium devices (landscape tablets, 768px and up) */
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 1199px) {
   main {
     width: 100vw;
     height: 956px;
@@ -184,14 +186,9 @@ section {
   }
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 600px) and (max-width: 1199px) {
+  main {
+    height: auto;
+    padding: 4rem 0;
+  }
 }
